#10378 권한 명 중복시 alert창에 로그가 그대로 보인다. 1. 오류 수정

--- a/src/main/resources/public/template/auth/authEdit.html
+++ b/src/main/resources/public/template/auth/authEdit.html
@@ -233,7 +233,7 @@
                     }
                 }
             } else {
-                if (isNotEquals('txtAuthNameOrg', 'txtAuthNameOrg')) {
+                if (isNotEquals('txtAuthName', 'txtAuthNameOrg')) {
                     for (let i = 0; i < authNames.length; i++) {
                         if (document.getElementById('txtAuthName').value === authNames[i]) {
                             aliceAlert.alertWarning([[#{auth.msg.duplicateAuthName}]]);
