#10361 [SCSS 개선] _buttons.scss 내부에 정의된 variable 관련 소스들을 _variables.scss 로 이동

--- a/src/main/resources/public/src/scss/document/_layout.scss
+++ b/src/main/resources/public/src/scss/document/_layout.scss
@@ -232,7 +232,7 @@
                 &-info {
                   .user-name { color: map-get($grays, "dark"); }
                   .user-date-time { 
-                    color: $grays;
+                    color: $gray;
                     margin-left: 0.625rem; // 10px
                   }
                   button {
