--- a/src/main/resources/public/src/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/src/scss/theme/default/_variables.scss
@@ -178,6 +178,17 @@ $vertical-bar-height:                         1.25rem; // 20px
 $vertical-bar-margin:                         0.0625rem 0.9375rem 0.0625rem 0; // 1px 5px 1px 0
 
 //////////////////////////// tag //////////////////////////////
+// tagify 영역 default
+$tagify-border:                              0.0625rem solid #DDDDDD; // 1px
+$tagify-hover-border:                        0.0625rem solid #CCCCCC; // 1px
+$tagify-focus-border:                        0.0625rem solid #3595F6; // 1px
+// tagify readonly
+$tagify-read-font-color:                     #586872;
+$tagify-read-bg-color:                       #F7F8F9;
+// tagify loading
+$tagify-load-border:                         0.1875rem solid; // 3px
+$tagify-load-border-color:                   #eeeeee #bbbbbb #888888 transparent; // 3px
+
 // tag
 $tag-font-color:                             rgba(0, 152, 255, 0.7); // $blue , 불투명도 70
 $tag-bg-color:                               rgba(0, 152, 255, 0.1); // $blue , 불투명도 10
