--- a/src/main/resources/public/assets/css/form2.css
+++ b/src/main/resources/public/assets/css/form2.css
@@ -4314,6 +4314,7 @@ body.modal-active {
 }
 .zenius-group.accordion .zenius-group-accordion-checkBox:checked + .zenius-group-label .arrow-left {
   transform: rotate(-90deg);
+  transform: rotate(-90deg);
 }
 .zenius-group.accordion .zenius-group-accordion-checkBox:checked ~ .zenius-row-tooltip:not(.off) {
   display: block;
