--- a/src/main/resources/public/template/formRefactoring/documentSearch.html
+++ b/src/main/resources/public/template/formRefactoring/documentSearch.html
@@ -153,7 +153,7 @@
     <template id="documentModalTemplate">
         <div class="document-main flex-column align-items-center">
             <div class="document-main-header flex-row justify-content-end align-items-center" id="documentMainHeader"></div>
-            <div class="drawing-board" id="drawingBoard"></div>
+            <div class="drawing-board" id="documentDrawingBoard"></div>
         </div>
     </template>
 </th:block>
