--- a/src/main/resources/public/template/formRefactoring/formDesigner.html
+++ b/src/main/resources/public/template/formRefactoring/formDesigner.html
@@ -7,6 +7,7 @@
     <meta http-equiv="cache-control" content="no-cache"/>
     <meta http-equiv="pragma" content="no-cache"/>
     <th:block th:replace="formRefactoring/fragments/formHead :: formHead"></th:block>
+    <link th:href="@{/assets/css/document2.css}" rel="stylesheet"/>
     <script th:src="@{/assets/js/util/shortcut-alice.js}"></script>
     <script th:src="@{/assets/vendors/sortableJS/sortable.js}"></script>
     <script type="module">
@@ -215,7 +216,7 @@
             </div>
             <!-- 폼 -->
             <div class="form-main" id="formMain">
-                <div class="align-center drawing-board" id="drawingBoard"></div>
+                <div class="align-center drawing-board" id="formDrawingBoard"></div>
             </div>
             <!-- 속성 패널 -->
             <div class="form-properties-panel-header breadcrumb">
@@ -234,6 +235,12 @@
         <input type="text" id="newFormName" data-validate-required="true">
         <label class="field-label" for="newFormDesc" th:text="#{form.label.description}"></label>
         <textarea class="textarea-scroll-wrapper" id="newFormDesc" rows="3" ></textarea>
+    </div>
+</template>
+<template id="documentModalTemplate">
+    <div class="document-main preview flex-column align-items-center">
+        <div class="document-main-header flex-row justify-content-end align-items-center" id="documentMainHeader"></div>
+        <div class="drawing-board" id="documentDrawingBoard"></div>
     </div>
 </template>
 </body>
