--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -79,7 +79,7 @@
         // 관련 문서 모달 내부 Template
         function createModalContent(data) {
             return `<div class="related-instance-list">` +
-                       `<input class="search col-5 mr-2" type="text" name="search" id="search" maxlength="100" placeholder="${i18n.msg('token.label.searchPlaceholder')}"/><span id="spanTotalCount" class="txt-num"></span>` +
+                       `<input class="search col-5 mr-2" type="text" name="search" id="search" maxlength="100" placeholder="${i18n.msg('token.label.relatedInstancePlaceholder')}"/><span id="spanTotalCount" class="txt-num"></span>` +
                        `<div class="table-set" id="instanceList"></div>` +
                     `</div>`;
         }
