#10530 _tag.scss 파일 정리
- _tagify.scss 구조 조정

--- a/src/main/resources/public/src/scss/theme/default/_tag.scss
+++ b/src/main/resources/public/src/scss/theme/default/_tag.scss
@@ -6,12 +6,12 @@
  * @version 1.0
  */
 // tag 동작 이벤트
-@include keyframe (tags--bump) {
+@keyframes tags--bump {
   30% {
     transform: scale(1.2);
   }
 }
-@include keyframe (rotateLoader) {
+@keyframes rotateLoader {
   to {
     transform: rotate(1turn);
   }
@@ -130,20 +130,6 @@
     user-select: none;
     transition: 0.13s ease-out;
 
-    &::before {
-      content: "";
-      position: absolute;
-      border-radius: inherit;
-      left: 0;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      z-index: -1;
-      pointer-events: none;
-      transition: 120ms ease;
-      box-shadow: 0 0 0 1.125rem #e5e5e5 inset;
-    }
-
     > * {
       white-space: nowrap;
       overflow: hidden;
@@ -164,6 +150,21 @@
       padding: 0.125rem; // 2px
       max-width: 21.88rem // 350px
     }
+
+    &::before {
+      content: "";
+      position: absolute;
+      border-radius: inherit;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      z-index: -1;
+      pointer-events: none;
+      transition: 120ms ease;
+      animation: tags--bump 0.3s ease-out 1;
+      box-shadow: 0 0 0 1.125rem #e5e5e5 inset;
+    }
   }
 
   &:hover:not([readonly]) div::before {
@@ -174,15 +175,24 @@
     box-shadow: 0 0 0 1.1em #d3e2e2 inset;
   }
 
-  &[readonly] {
+  &--loading {
+    pointer-events: none;
+
     .tagify__tag__removeBtn {
       display: none;
     }
 
-    > div::before {
-      background: linear-gradient(45deg, #e5e5e5 25%, transparent 25%, transparent 50%, #e5e5e5 50%, #e5e5e5 75%, transparent 75%, transparent) 0/5px 5px;
-      box-shadow: none;
-      filter: brightness(0.95);
+    &::after {
+      content: "";
+      vertical-align: middle;
+      opacity: 1;
+      width: 0.688rem; // 11px
+      height: 0.688rem; // 11px
+      border: $tagify-load-border;
+      border-color: $tagify-load-border-color;
+      border-radius: 50%;
+      animation: rotateLoader 0.4s infinite linear;
+      margin: 0 0.5rem 0 -0.063rem; // 8px, -1px
     }
   }
 
@@ -212,50 +222,42 @@
 
   &.tagify--notAllowed {
     &:not(.tagify__tag--editable) div {
+      > span {
+        opacity: 0.5;
+      }
+
       &::before {
         box-shadow: 0 0 0 1.125em rgba(211, 148, 148, 0.5) inset !important;
         transition: 0.2s;
       }
-      > span {
-        opacity: 0.5;
-      }
     }
   }
-}
 
-.tagify__tag--loading {
-  pointer-events: none;
+  &[readonly] {
+    .tagify__tag__removeBtn {
+      display: none;
+    }
 
-  &::after {
-    content: "";
-    vertical-align: middle;
-    opacity: 1;
-    width: 0.688rem; // 11px
-    height: 0.688rem; // 11px
-    border: $tagify-load-border;
-    border-color: $tagify-load-border-color;
-    border-radius: 50%;
-    animation: rotateLoader 0.4s infinite linear;
-    margin: 0 0.5rem 0 -0.063rem; // 8px, -1px
-  }
-
-  .tagify__tag__removeBtn {
-    display: none;
+    > div::before {
+      background: linear-gradient(45deg, #e5e5e5 25%, transparent 25%, transparent 50%, #e5e5e5 50%, #e5e5e5 75%, transparent 75%, transparent) 0/5px 5px;
+      box-shadow: none;
+      filter: brightness(0.95);
+    }
   }
 }
 
 .tagify__tag--editable {
-  &.tagify--invalid {
-    > div::before {
-      box-shadow: 0 0 0 2px #d39494 inset !important;
-    }
-  }
-
   > div {
     color: black;
 
     &::before {
       box-shadow: 0 0 0 2px #d3e2e2 inset !important;
+    }
+  }
+
+  &.tagify--invalid {
+    > div::before {
+      box-shadow: 0 0 0 2px #d39494 inset !important;
     }
   }
 }
@@ -284,12 +286,12 @@
     color: white;
     background: #c77777;
     + div {
+      > span {
+        opacity: 0.5;
+      }
       &::before {
         box-shadow: 0 0 0 1.125em rgba(211, 148, 148, 0.3) inset !important;
         transition: 0.2s;
-      }
-      > span {
-        opacity: 0.5;
       }
     }
   }
@@ -304,32 +306,6 @@
   line-height: inherit;
   position: relative;
   white-space: pre-line;
-  &::before {
-    top: 0;
-    bottom: 0;
-    width: 0;
-    height: 1em;
-    display: inline-block;
-    position: absolute;
-    content: attr(data-placeholder);
-    line-height: 1em;
-    margin: auto 0;
-    z-index: 1;
-    color: black;
-    white-space: nowrap;
-    pointer-events: none;
-    opacity: 0;
-  }
-
-  &::after {
-    content: attr(data-suggest);
-    display: inline-block;
-    white-space: pre;
-    color: black;
-    opacity: 0.3;
-    pointer-events: none;
-    max-width: 100px;
-  }
 
   &:empty::before {
     transition: 0.2s ease-out;
@@ -351,6 +327,34 @@
       opacity: 0.3;
       transform: none;
     }
+  }
+
+  &::before {
+    width: 0;
+    height: 1em;
+    top: 0;
+    bottom: 0;
+    display: inline-block;
+    position: absolute;
+    content: attr(data-placeholder);
+    line-height: 1em;
+    margin: auto 0;
+    z-index: 1;
+    color: black;
+    white-space: nowrap;
+    pointer-events: none;
+    opacity: 0;
+  }
+
+
+  &::after {
+    content: attr(data-suggest);
+    display: inline-block;
+    white-space: pre;
+    color: black;
+    opacity: 0.3;
+    pointer-events: none;
+    max-width: 100px;
   }
 
   .tagify__tag {
